syntax = "proto3";

package notif.middleware.announcement.sendstate.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/notif/middleware/v1/announcement/sendstate";

import "google/api/annotations.proto";
import "basetypes/v1/channel.proto";
import "basetypes/v1/conds.proto";

message SendState {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"user_id"
  string UserID = 30;
  // @inject_tag: sql:"announcement_id"
  string AnnouncementID = 40;
  // @inject_tag: sql:"lang_id"
  string LangID = 50;
  // @inject_tag: sql:"title"
  string Title = 60;
  // @inject_tag: sql:"content"
  string Content = 70;
  // @inject_tag: sql:"type"
  string AnnouncementType = 80;
  // @inject_tag: sql:"channel"
  string Channel = 90;
  // @inject_tag: sql:"start_at"
  uint32 StartAt = 99;
  // @inject_tag: sql:"end_at"
  uint32 EndAt = 100;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 110;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 120;
}

message SendStateReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string UserID = 30;
  optional string AnnouncementID = 40;
  optional basetypes.v1.NotifChannel Channel = 50;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal UserID = 30;
  optional basetypes.v1.StringVal AnnouncementID = 40;
  optional basetypes.v1.Uint32Val Channel = 50;
  optional basetypes.v1.Uint32Val EndAt = 60;
  optional basetypes.v1.StringSliceVal UserIDs = 70;
}

