syntax = "proto3";

package notif.middleware.contact.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/notif/middleware/v1/contact";

import "google/api/annotations.proto";
import "basetypes/v1/conds.proto";
import "basetypes/v1/usedfor.proto";
import "basetypes/v1/signmethod.proto";

message ContactReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string Account = 30;
  optional basetypes.v1.SignMethod AccountType = 40;
  optional basetypes.v1.UsedFor UsedFor = 50;
  optional string Sender = 60;
}

message Contact {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"account"
  string Account = 30;
  // @inject_tag: sql:"account_type"
  string AccountTypeStr = 39;
  basetypes.v1.SignMethod AccountType = 40;
  // @inject_tag: sql:"used_for"
  string UsedForStr = 49;
  basetypes.v1.UsedFor UsedFor = 50;
  // @inject_tag: sql:"sender"
  string Sender = 60;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 70;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 80;
}

message Conds {
  basetypes.v1.Uint32Val ID = 9;
  basetypes.v1.StringVal EntID = 10;
  basetypes.v1.StringVal AppID = 30;
  basetypes.v1.Uint32Val AccountType = 40;
  basetypes.v1.Uint32Val UsedFor = 50;
}

message TextInfo {
  string Subject = 10;
  string Content = 20;
  string From = 30;
  string To = 40;
  repeated string ToCCs = 50;
  repeated string ReplyTos = 60;
}

